--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "HomeHave",
+  "name": "homehave",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind": "tailwindcss -i ./views/input.css -o ./public/output.css --watch",
-    "start": "nodemon app.js & npm run tailwind"
+    "build": "tailwindcss -i ./views/input.css -o ./public/output.css --minify",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "tailwind:watch": "tailwindcss -i ./views/input.css -o ./public/output.css --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "nodemon": "^3.1.7",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "body-parser": "^1.20.3",
     "connect-mongodb-session": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -27,7 +21,12 @@
     "express-validator": "^7.2.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.11.4"
+    "multer": "^1.4.5-lts.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "nodemon": "^3.1.7",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
