--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "express-validator": "^7.2.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "nodemon": "^3.1.7",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "postcss": "^8.5.6"
   }
 }
