--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "build": "tailwindcss -i ./views/input.css -o ./public/output.css --minify",
+    "build": "npx tailwindcss -i ./views/input.css -o ./public/output.css --minify",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "tailwind:watch": "tailwindcss -i ./views/input.css -o ./public/output.css --watch"
+    "tailwind:watch": "npx tailwindcss -i ./views/input.css -o ./public/output.css --watch"
   },
   "engines": {
     "node": "20.x"
@@ -24,11 +24,11 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.21"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "nodemon": "^3.1.7",
-    "postcss": "^8.5.6"
+    "nodemon": "^3.1.7"
   }
 }
