--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "node": "20.x"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^1.41.3",
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
@@ -24,9 +25,9 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
-    "tailwindcss": "^3.4.17",
+    "multer-storage-cloudinary": "^4.0.0",
     "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
